--- a/readme.html
+++ b/readme.html
@@ -1,14 +1,10 @@
 <!-- 
 File: readme.html
 
-Copyright (c) Phantom Cyber Corporation, 2014-2017
+Copyright (c) 2017-2020 Splunk Inc.
 
-This unpublished material is proprietary to Phantom Cyber.
-All rights reserved. The methods and
-techniques described herein are considered trade secrets
-and/or confidential. Reproduction or distribution, in whole
-or in part, is forbidden except by express written permission
-of Phantom Cyber.
+SPLUNK CONFIDENTIAL - Use or disclosure of this material in whole or in part
+without a valid written license from Splunk Inc. is PROHIBITED.
 -->
 
 <p>This App is an Ingestion source. In the Phantom documentation, in the <a href="../admin/">Administration Manual</a> under the <a href="../admin/sources">Data Sources</a> section, you will find an explanation of how Ingest Apps works and how information is extracted from the ingested data. There is a general explanation in Overview, and some individuals Apps have their own sections.</p>
