--- a/readme.html
+++ b/readme.html
@@ -1,10 +1,8 @@
-<!-- 
-File: readme.html
+<!-- File: readme.html
+  Copyright (c) 2020 Splunk Inc.
 
-Copyright (c) 2017-2020 Splunk Inc.
-
-SPLUNK CONFIDENTIAL - Use or disclosure of this material in whole or in part
-without a valid written license from Splunk Inc. is PROHIBITED.
+  SPLUNK CONFIDENTIAL - Use or disclosure of this material in whole or in part
+  without a valid written license from Splunk Inc. is PROHIBITED.
 -->
 
 <p>This App is an Ingestion source. In the Phantom documentation, in the <a href="../admin/">Administration Manual</a> under the <a href="../admin/sources">Data Sources</a> section, you will find an explanation of how Ingest Apps works and how information is extracted from the ingested data. There is a general explanation in Overview, and some individuals Apps have their own sections.</p>
