Add dependency licenses to readme

--- a/readme.html
+++ b/readme.html
@@ -7,3 +7,58 @@
 
 <p>This App is an Ingestion source. In the Phantom documentation, in the <a href="../admin/">Administration Manual</a> under the <a href="../admin/sources">Data Sources</a> section, you will find an explanation of how Ingest Apps works and how information is extracted from the ingested data. There is a general explanation in Overview, and some individuals Apps have their own sections.</p>
 <p>A video explaining the configuration of a REST Asset for ingestion can be found on the Phantom portal at <a href="https://my.phantom.us/video/4">this link</a></p>
+
+<h2>jsonpath_rw</h2>
+<p>
+    This app makes use of the Python jsonpath_rw module, which is licensed under the Apache 2.0 License, Copyright 2013- Kenneth Knowles
+</p>
+
+<h2>weakrefmethod</h2>
+<p>
+    This app makes use of the Python weakrefmethod module, which is licensed under the Python Software Foundation License.
+</p>
+
+<h2>cybox</h2>
+<p>
+    This app makes use of the Python cybox module, which is licensed under the BSD License, Copyright (c) 2017, The MITRE Corporation.
+</p>
+
+<h2>decorator</h2>
+<p>
+    This app makes use of the Python decorator module, which is licensed under the BSD License, Copyright (c) 2005-2018, Michele Simionato.
+</p>
+
+<h2>stix</h2>
+<p>
+    This app makes use of the Python stix module, which is licensed under the BSD License, Copyright (c) 2017, The MITRE Corporation.
+</p>
+
+<h2>six</h2>
+<p>
+    This app makes use of the Python six module, which is licensed under the MIT License, Copyright (c) 2010-2020 Benjamin Peterson
+</p>
+
+<h2>mixbox</h2>
+<p>
+    This app makes use of the Python mixbox module, which is licensed under the BSD License, Copyright (c) 2017, The MITRE Corporation.
+</p>
+
+<h2>ordered_set</h2>
+<p>
+    This app makes use of the Python ordered_set module, which is licensed under the MIT License, Copyright (c) 2018 Luminoso Technologies, Inc.
+</p>
+
+<h2>ply</h2>
+<p>
+    This app makes use of the Python ply module, which is licensed under the BSD License, Copyright (C) 2001-2020 David M. Beazley (Dabeaz LLC).
+</p>
+
+<h2>python_dateutil</h2>
+<p>
+    This app makes use of the Python python_dateutil module, which is licensed under the Apache 2.0 License, Copyright 2017- Paul Ganssle
+</p>
+
+<h2>libtaxii</h2>
+<p>
+    This app makes use of the Python libtaxii module, which is licensed under the BSD License, Copyright (c) 2017, The MITRE Corporation.
+</p>
