--- a/release_notes/release_notes.html
+++ b/release_notes/release_notes.html
@@ -1,5 +1,9 @@
-<b>REST Data Source Release Notes - Published by Splunk December 29, 2020</b>
+<b>REST Data Source Release Notes - Published by Splunk January 20, 2022</b>
 <br><br>
+<b>Version 2.0.5 - Released January 20, 2022</b>
+<ul>
+<li>Changed the hashing algorithm to SHA256 when running in FIPS mode [PAPP-23693]</li>
+</ul>
 <b>Version 2.0.3 - Released December 29, 2020</b>
 <ul>
 <li>Compatibility changes for Python 3 support</li>
